@@ -5,6 +5,9 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
+- DxBuilder: Fix check if field is present (to determine if default values should be set).
+  [lgraf]
+
 - DxBuilder: Make sure default values are set before adding content to container.
   [lgraf]
 
